--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -22,6 +22,11 @@ body {
   background-position: 85% 25%, center;
   background-size: 250px, cover;
 }
+.welcome-image{
+  justify-content: center;
+  margin-top: 50px;
+  margin-left: 280px;
+}
 
 .header {
   position: fixed;
