--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -46,11 +46,12 @@ body {
 }
 
 .container {
-  padding: 20px;
-  width: 100%;
   max-width: 1280px;
-  margin-top: 100px;
-  margin-left: 100px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+  /* margin-top: 100px;
+  margin-left: 100px; */
 }
 
 .container-title {
