--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -37,7 +37,9 @@ body {
 .container-header{
   max-width: 1280px;
   padding: 20px 0;
+  flex-wrap: wrap;
 }
+
 .header {
   position: fixed;
   top: 0;
@@ -51,17 +53,14 @@ body {
 
 .container {
   max-width: 1280px;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: 0 auto;
   padding: 20px 0;
 }
 
 .container-content{
   margin-top: 100px;
   margin-bottom: 50px;
-  /* padding: 20px; */
+  padding: 20px;
   text-align: justify;
 }
 
