--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -44,18 +44,20 @@ body {
 .header {
   position: fixed;
   top: 0;
-  width: 100%;
-  height: 100px;
   text-align: center;
   margin-bottom: 20px;
   background-color: rosybrown;
   z-index: 1;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .container {
   max-width: 1280px;
   margin: 0 auto;
   padding: 20px 0;
+  flex-wrap: wrap;
 }
 
 .container-content{
@@ -71,6 +73,7 @@ body {
   text-align: center;
   text-shadow: 1px 1px 2px rgb(183, 94, 94)
 }
+
 
 .navbar-list {
   list-style: none;
